Add allowSubset and allowSuperset options to property validation (#1006)